force-app/main/default/objects/Quote/fields/Acceptable__c.field-meta.xml
<CustomField>
    <fullName>Acceptable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptable</label>
    <type>Checkbox</type>
</CustomField>