force-app/main/default/objects/Quote/fields/Are_The_Frequencies_Filled__c.field-meta.xml
<CustomField>
    <fullName>Are_The_Frequencies_Filled__c</fullName>
    <formula>AND(
  IF(
    Opportunity.Visible_Anticipation_Frequency__c,
    AND(
      NOT(ISPICKVAL(Opportunity.Antecipation_Frequency_1__c, &quot;&quot;)),
      NOT(ISPICKVAL(Opportunity.Antecipation_Frequency_2__c, &quot;&quot;))
    ),
    TRUE
  ),
  IF(
    Opportunity.Visible_Settlement_Frequency__c,
    AND(
      NOT(ISPICKVAL(Opportunity.Settlement_Frequency_1__c, &quot;&quot;)),
      NOT(ISPICKVAL(Opportunity.Settlement_Frequency_2__c, &quot;&quot;))
    ),
    TRUE
  )
)</formula>
    <label>Are The Frequencies Filled</label>
    <type>Checkbox</type>
</CustomField>