force-app/main/default/objects/Quote/fields/CEOApprover__c.field-meta.xml
<CustomField>
    <fullName>CEOApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>