force-app/main/default/objects/Quote/fields/CustomerAcceptance__c.field-meta.xml
<CustomField>
    <fullName>CustomerAcceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Acceptance</label>
    <type>Checkbox</type>
</CustomField>