force-app/main/default/objects/Quote/fields/DirectorApprover__c.field-meta.xml
<CustomField>
    <fullName>DirectorApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>