force-app/main/default/objects/Quote/fields/NeedsApprovalBoard__c.field-meta.xml
<CustomField>
    <fullName>NeedsApprovalBoard__c</fullName>
    <label>Precisa Aprovação Board</label>
    <summaryFilterItems>
        <field>QuoteLineItem.NeedsApproval__c</field>
        <operation>equals</operation>
        <value>Board</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>