force-app/main/default/objects/Quote/fields/OtherQuoteAccepted__c.field-meta.xml
<CustomField>
    <fullName>OtherQuoteAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other quote was accepted</label>
    <type>Checkbox</type>
</CustomField>