force-app/main/default/objects/Quote/validationRules/QuoteCanceled.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteCanceled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status),   ISPICKVAL(PRIORVALUE(Status), &apos;Canceled&apos;)  )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Não pode alterar o status de cotação cancelada</errorMessage>
</ValidationRule>