force-app/main/default/objects/Quote/validationRules/QuoteRequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteRequiredFields</fullName>
    <active>false</active>
    <description>Campos obrigatórios da oportunidade para se criar uma quote</description>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(Opportunity.Transacoes_Mensais__c)
)</errorConditionFormula>
    <errorMessage>Preencher campo obrigatória na oportunidade antes de criar cotação.</errorMessage>
</ValidationRule>