force-app/main/default/objects/Quote/validationRules/teste.validationRule-meta.xml
<ValidationRule>
    <fullName>teste</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Opportunity.Transacoes_Mensais__c)</errorConditionFormula>
    <errorMessage>teste</errorMessage>
</ValidationRule>